scripts/deployment-django.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django-app
  namespace: app
spec:
  selector:
    matchLabels:
      app: djangoapp
  replicas: 2
  template:
    metadata:
      labels:
        app: djangoapp
    spec:
      imagePullSecrets:
      - name: ocirsecret
      containers:
      - name: app
        image: iad.ocir.io/idmaqhrbiuyo/djangotest:v0.1
        ports:
        - containerPort: 8000
        readinessProbe:
          httpGet:
            path: /api/ping
            port: 8000
          initialDelaySeconds: 60
          periodSeconds: 5
          successThreshold: 2
        resources:
          limits:
            cpu: "256m"
            memory: 512Mi
          requests:
            cpu: "256m"
            memory: "512Mi"
