scripts/ingress-java.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: java-app-ing
  namespace: app
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
  - secretName: tls-secret
  rules:
  - http:
      paths:
      - path: /api/status
        pathType: Prefix
        backend:
          service:
            name: java-app-svc
            port:
              number: 80
